--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
 <title> Nazir Ahmed Sabbir - Web Developer</title>
 <style> 
@@ -40,3 +41,4 @@ p {
     <input type="email" placeholder="Email Address.">
     <input type="submit" value="Submit">
 </body>
+</html>
