--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ p {
 </head>
 
 <body>
-  <img src="/sabbir.png">
+  <img src="sabbir.png">
         <h1> Nazir Ahmed Sabbir </h1>
         <p> Hi!, I'm Nazir Ahmed Sabbir. A web developer based on Dhaka.</p>
 
