--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     background: url("background.png");
     background-size: cover;
     background-position: center;
+    color: white;
   }
 p {
     text-align : center;
@@ -26,7 +27,7 @@ p {
     font-size: 16px;
   }
   input[type="submit"]{
-    background: green;
+    background: blue;
     color: white;
   }
   
@@ -38,7 +39,9 @@ p {
         <h1> Nazir Ahmed Sabbir </h1>
         <p> Hi!, I'm Nazir Ahmed Sabbir. A web developer based on Dhaka.</p>
 
-    <input type="email" placeholder="Email Address.">
-    <input type="submit" value="Submit">
+<center>    
+  <input type="email" placeholder="Email Address.">
+  <input type="submit" value="Submit"> 
+</center>
 </body>
 </html>
